...
    required init?(coder aDecoder: NSCoder) {
        super.init(coder: aDecoder)
        self.initialize()
    }
    
    func initialize() {
        self.accessibilityLabel = "wildcard container view"
        loadedCards = []
        cardsLoadedIndex = 0
        self.CARD_FRAME = CGRect(x: (self.frame.size.width - CARD_WIDTH)/2, y: (self.frame.size.height - CARD_HEIGHT)/2, width: CARD_WIDTH, height: CARD_HEIGHT)
    }
    
    
...
